Fixed menu overlapping for smaller medium screens

--- a/css/main.css
+++ b/css/main.css
@@ -941,24 +941,25 @@ div.cro_sldr {
   font-family: 'Oswald', sans-serif;
   color: #000;
   list-style: none;
-  padding: 0;
   margin: 0;
+  box-sizing: border-box;
+  margin-top: 20px;
+  line-height: 2em;
+  width: 100%;
 }
-#post-854 ul .food {
-  width: 433px;
-  font-size: 1.7em;
-  vertical-align: top;
+#post-854 ul li {
   position: relative;
-  margin-top: 30px;
-  line-height: 1.3em;
+  font-size: 1.5em;
+  padding-right: 80px;
 }
-#post-854 ul .price {
-  font-size: 1.7em;
+#post-854 ul li ul li {
+  width: 0;
   position: absolute;
-  top: 0px;
-  list-style: none;
-  right: -120px;
-  line-height: 1.3em;
+  top: 0;
+  right: 0;
+  text-align: right;
+  font-size: 1.5em;
+  padding-right: 50px;
 }
 #post-854 .border {
   border-width: 1px;
